# gpsdrive

./: .cdtbuild  .cvsignore  AUTHORS  CMakeLists.txt  CVSIGNORE  ChangeLog  ConfigureChecks.cmake  DEVPACKAGES  DefineOptions.cmake  FAQ.gpsdrive  GPS-receivers  INSTALL  INSTALL.cmake  LISEZMOI  LISEZMOI.SQL  LISEZMOI.kismet  Makefile.am  Makefile.in  NEWS  README  README.FreeBSD  README.SQL  README.kismet  TODO  acinclude.m4  aclocal.m4  autogen.sh  config.h  config.h.cmake  config.h.in  configure  configure.ac  depcomp  wp2sql
DSL/: Gpsdrive.lnk  Makefile.am  Makefile.in  README  build-gpsdriveDB.sh  build-mysql.sh  build.sh  package.sh
Documentation/: CREDITS.i18n  FAQ.gpsdrive  FAQ.gpsdrive.fr  GPS-receivers  Known-Bugs.txt  LEEME  LISEZMOI  LISEZMOI.FreeBSD  LISEZMOI.SQL  Makefile.am  Makefile.in  README.Bluetooth  README.Fedora  README.Mapnik_and_OpenStreetMaps  README.OpenStreetMap-Vektordata  README.SQL  README.Ubuntu  README.Upgrade  README.gpspoint2gspdrive  README.kismet  README.lib_map  README.maemo  README.mysql  README.nasamaps  README.tracks  TODO  install-mapnik-osm.txt
car-menu/: carbox-control.sh
data/: CMakeLists.txt  Makefile.am  Makefile.in  README.icons  geoinfo.db  geoinfo.de.db  gpsdrive.desktop  icons.txt  icons.xml  map_koord.txt  poi_examples.gpx  poi_types.html  rebuild-all.sh  rebuild-icons.txt.sh  rebuild-poi_types.html.pl  update_icons.pl
data/goodies/: gpsdrive-wallpaper_1280x800.xcf  gpsdrive-wallpaper_800x480.xcf
data/icons/: CMakeLists.txt  Makefile.am  Makefile.in  dev-icons.txt  icons.html  index.html
data/maps/: CMakeLists.txt  ne_10m_land_reduced.tar.bz2  ne_10m_pop1M_cities.tar.bz2  update_svn_revision.sh
data/maps/debian/: changelog  control  copyright  files  pth  rules
data/mysql/: my.cnf
data/pixmaps/: CMakeLists.txt  gpsdrivesplash.xcf  gpsicon.xpm
data/poi/: CMakeLists.txt  cities.txt  cities_au.txt  cities_germany.txt  germany.txt  shops_au.txt
data/streets/: Autobahnen.txt  Streets.txt  Streets_au.txt
debian/: Makefile.am  Makefile.in  changelog  config  control  copyright  create_missing_man_pages.sh  create_misssing_man_pages.sh  debian-etch-32.patch  debian-etch-64.patch  debian-lenny-32.patch  debian-lenny-64.patch  files  gpsdrive.config  gpsdrive.postinst  gpsdrive.templates  menu  move_utils.sh  postinst  rename_scripts.sh  rules  rules.cmake  templates  ubuntu-hardy-32.patch  ubuntu-karmic-32.patch  ubuntu-karmic-64.patch  ubuntu-lucid-32.patch  ubuntu-lucid-64.patch
gentoo/: Makefile.am  Makefile.in  gpsdrive-cvs-2.10.ebuild  gpsdrive-version.ebuild
intl/: bindtextdom.c  dcgettext.c  dcigettext.c  dcngettext.c  dgettext.c  dngettext.c  explodename.c  finddomain.c  gettext.c  intl-compat.c  l10nflist.c  loadmsgcat.c  localcharset.c  localealias.c  localename.c  log.c  ngettext.c  os2compat.c  plural-exp.c  plural.c  printf-args.c  printf-parse.c  printf.c  relocatable.c  textdomain.c  vasnprintf.c
m4/: ChangeLog  ac_check_perl_modules.m4  ac_prog_perl_version.m4  aq_check_gdal.m4
man/: CMakeLists.txt  Makefile.am  Makefile.in  friendsd2.1  garble.1  geo-code.1  geo-nearest.1  geoinfo.1  gpsd_nmea.sh.1  gpsdrive.1
man/de/: Makefile.am  Makefile.in  gpsdrive.1
man/es/: Makefile.am  Makefile.in  gpsdrive.1
msvc/: README.txt  config.c  config.h  getopt.c  getopt.h  gpsdrive.sln  gpsdrive.vcproj  speech_sapi.c
po/: CMakeLists.txt  ChangeLog  Makefile.in  POTFILES.in  da.gmo  da.po  de.gmo  de.po  de_AT.gmo  de_AT.po  el.po  es.gmo  es.po  et.po  (+35 more)
scripts/: CMakeLists.txt  Makefile.am  Makefile.in  check_osm.pl  connect-bluetooth-gps.sh  convert-waypoints.pl  create.sql  create_geoinfo-db.pl  create_misssing_man_pages.sh  devpackages-debian.sh  gdal_slice.sh  gen_manpage.sh  geo-code  geo-nearest  geocache2way.pl  geoinfo.pl  gpsd-connect-bluetooth.sh  gpsd_nmea.sh  gpsdrive-init-db.pl  gpsdrive-update-mapnik-poitypes.pl  gpsdrive_tile_crush.sh  gpsfetchmap.pl  gpspoint2gpsdrive.pl  gpssmswatch  gpssql_backup.sh  gpssql_restore.sh  gpstile_crush.sh  gpstile_fetch_and_assemble.sh  gpstiled_wms_fetch_and_assemble.sh  nasaconv.sh  poi-import.pl  poi-manager.pl  poi-manager_mysql.pl  poi.pl  start_mysql_as_user.sh  update-mapnik-from-planet.sh  wp2sql  wpcvt  wpget
scripts/Geo/Gpsdrive/: DBFuncs.pm  DB_Defaults.pm  DB_Examples.pm  DB_tracks.pm  GpsDrive.pm  JiGLE.pm  NGA.pm  OSM.pm  OpenGeoDB.pm  OpenGeoDB2.pm  Utils.pm  WDB.pm  Way_Txt.pm  getstreet.pm  gettraffic.pm
scripts/POI/: DBFuncs.pm  DB_Defaults.pm  Defaults_Cities.pm  Gps.pm  GpsDrive.pm  JiGLE.pm  Kismet.pm  NGA.pm  OpenGeoDB.pm  PocketGpsPoi.pm  Utils.pm  WDB.pm  Way_Txt.pm  census.pm  gpsdrive.pm  mapsource.pm
scripts/mapnik/: CMakeLists.txt  Makefile.am  Makefile.in  convert_xml_for_mapnik2.sh  gpsdrive_mapnik_gentiles-in.py  mapnik-osm-xml_2_gpsdrive-osm-xml.pl  osm-in.xml  osm_mapnik2.0-in.xml
scripts/mapnik/symbols/: CMakeLists.txt  Makefile.am  Makefile.in
scripts/osm/: Makefile.am  Makefile.in
scripts/perl_lib/: Makefile.am  Makefile.in
scripts/perl_lib/Geo/Gpsdrive/: DBFuncs.pm  DB_Defaults.pm  DB_Examples.pm  DB_tracks.pm  OSM.pm  Utils.pm  Way_Txt.pm
src/: .cvsignore  CMakeLists.txt  CVSIGNORE  LatLong-UTMconversion.c  LatLong-UTMconversion.h  Makefile.am  Makefile.in  battery.c  battery.h  compass.h  database.c  database.h  database_postgis.c  database_postgis.h  database_sqlite.c  database_sqlite.h  download_map.c  download_map.h  draw_grid.c  draw_tracks.c  draw_tracks.h  em.c  f_error_popup.c  f_expose_cb.c  f_garblemain.c  f_initgps.c  f_loadwaypoints.c  f_main.c  f_quit_program.c  f_savewaypoints.c  f_startgpsd.c  f_usr2handler.c  fly.c  friends.c  friendsd.c  garble.cpp  garmin_application.cpp  garmin_application.h  garmin_command.h  garmin_data.cpp  (+105 more)
src/lib_map/: CMakeLists.txt  Makefile.am  Makefile.in  map.h  map_draw.c  map_gpsmisc.c  map_load.c  map_port.c  map_port_cpp.cpp  map_priv.h  map_render.c  map_render_cpp.cpp  map_transform.c
src/mysql/: my_config.h  mysql_version.h
src/util/: CMakeLists.txt  Makefile.am  Makefile.in  gmapview.c  gps.c  mmapview.c  qmapview.cpp  wmapview.c  worldgen.c
(+51 files in other folders)
