# Makefile.am in main dir
#AUTOMAKE_OPTIONS=dist-bzip2

SUBDIRS =      src po man intl scripts data Documentation debian DSL gentoo
DIST_SUBDIRS = $(SUBDIRS)


# I'm not shure if this is needed
EXTRA_DIST = po/Makefile.am po/Makefile.in po/POTFILES
pkgdata_DATA = depcomp

documentation1dir   = $(datadir)/gpsdrive/Documentation
documentation1_DATA = AUTHORS COPYING INSTALL README NEWS
